--- a/twig/Timeplan/rapport.html.twig
+++ b/twig/Timeplan/rapport.html.twig
@@ -1,26 +1,44 @@
-<h1>Hello World</h1>
+{% for key, dag in dager %}
+    <h1>{{ key|dato('l')|capitalize }}</h1>
+    {% set hendelse = dag['hendelse'] %}
 
-{# <pre>
-    {{ dump(hendelser) }}
-</pre> #}
+    <h3>{{ hendelse.getNavn() }}</h3>
 
+    {% for innslag in dag['innslag'] %}        
+        {% set personer = innslag.getPersoner().getAll() %}
+        <hr>
+        <h5 class="innslag-hendelse-info make-tab"><b>{{ innslag.getNavn() }}</b> - <i>oppmotested: {{ hendelse.getSted() }}</i></h5>
+            <table class="table make-tab">
+                <thead>
+                    <tr >
+                        <th class="col-xs-4" scope="col">Navn</th>
+                        <th class="col-xs-4" scope="col">Tlf</th>
+                        <th class="col-xs-4" scope="col">Oppmøtetid</th>
+                    </tr>
+                </thead>
+        {% for person in personer %}
 
-
-{% for hendelse in hendelser %}
-    <div id="rapportDeltakereTable" class="table table-striped">
-        <div>
-            <h3>{{ hendelse.getNavn() }}</h3>
-            {% for innslag in hendelse.getInnslag().getAll() %}
-                <h5>{{ innslag.getNavn() }} - {{ innslag.getType().getKey() }}</h5>
-                <h4>oppmotetid: {{ hendelse.getOppmoteTid(innslag)|date('Y-m-d H:i:s') }}</h4>
-                {% if innslag.getType().harTitler() %}
-                    {% for person in innslag.getPersoner().getAll() %}
-                        <p style="padding-left: 30px">
-                            {{ person.getNavn() }} - tid: - varighet {{ dump(innslag.getVarighet()) }}
-                        </p>
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
-        </div>
-    </div>
+                <tbody>
+                    <tr class="">
+                        <td class="col-xs-4">{{ person.getNavn() }}</td>
+                        <td class="col-xs-4">{{ person.getMobil() }}</td>
+                        <td class="col-xs-4">{{ hendelse.getOppmoteTid(innslag)|dato('H:i') }}</td>
+                    </tr>
+                </tbody>
+        {% endfor %}
+            </table>
+    {% endfor %}
+    <hr>
 {% endfor %}
+
+<style>
+    .make-tab {
+        margin-left: 30px;
+    }
+    table.make-tab {
+        margin-left: 60px;
+    }
+    .innslag-hendelse-info {
+        margin-top: 30px;
+    }
+</style>
