--- a/twig/Timeplan/rapport.html.twig
+++ b/twig/Timeplan/rapport.html.twig
@@ -1,10 +1,10 @@
 {% for key, dag in dager %}
     <h1>{{ key|dato('l')|capitalize }}</h1>
-    {% for hendelse in dag['hendelse'] %}
+    {% for hendelse in dag %}
         
         <h3>{{ hendelse.getNavn() }}</h3>
 
-        {% for innslag in dag['innslag'] %}        
+        {% for innslag in hendelse.getInnslag().getAll() %}        
             <hr>
             <h5 class="innslag-hendelse-info make-tab"><b>{{ innslag.getNavn() }}</b> - <i>oppmotested: {{ hendelse.getSted() }}</i></h5>
                 <table class="table make-tab">
