Fikser: grupperer etter dager fungerer ikke
Fikser gruppering etter dager fungerte ikke med timestamp fordi tidspunkter er forskjellige  på samme dato. Fikset!

--- a/twig/Timeplan/rapport.html.twig
+++ b/twig/Timeplan/rapport.html.twig
@@ -1,7 +1,7 @@
 {% for fylke_key, fylkeArr in fylker %}
     <h1>{{ fylke_key }}</h1>
 
-    {% for dag_key, fylke in fylkeArr|sort((a, b) => dag_key <=> dag_key) %}
+    {% for dag_key, fylke in fylkeArr|sort((a, b) => dag_key|date('U') <=> dag_key|date('U')) %}
         <h3>{{ dag_key|dato('l - d.m.Y') }}</h3>
         {% for hendelse in fylke %}
             <h4 class="make-tab">{{ hendelse.getNavn() }}</h4>
