Henter fylke fra kommune når deltaker har ikke det

--- a/twig/Deltakere/rapport.html.twig
+++ b/twig/Deltakere/rapport.html.twig
@@ -27,6 +27,8 @@
                 {% endif %}
                 {% if person.getFylke() %}
                     <td>{{ person.getFylke().getNavn() }}</td>
+                {% else %}
+                    <td>{{ innslag.getFylke().getNavn() }}</td>
                 {% endif %}
             </tr>
         {% endfor %}
@@ -57,6 +59,8 @@
                     
                     {% if person.getFylke() %}
                         <td>{{ person.getFylke().getNavn() }}</td>
+                    {% else %}
+                        <td>{{ innslag.getFylke().getNavn() }}</td>
                     {% endif %}
                 </tr>
             {% endfor %}
