Revert "Henter kommune fra innslag når deltaker har ikke det"
This reverts commit 67e26eacf3e4c9346882526bcf2169420da0a75c.

--- a/twig/Deltakere/rapport.html.twig
+++ b/twig/Deltakere/rapport.html.twig
@@ -22,13 +22,9 @@
                 <td>{{ counter }}. {{ person.getNavn() }}</td>
                 <td>{{ innslag.getNavn() }}</td>
                 <td>{{ innslag.getType() }}</td>
-
-                {% if person.getKommune() && person.getKommune() != 'ukjent' %}
+                {% if person.getKommune() %}
                     <td>{{ person.getKommune().getNavn() }}</td>
-                {% else %}
-                    <td>{{ innslag.getKommune().getNavn() }}</td>
                 {% endif %}
-
                 {% if person.getFylke() %}
                     <td>{{ person.getFylke().getNavn() }}</td>
                 {% else %}
@@ -57,10 +53,8 @@
                     <td>{{ innslag.getNavn() }}</td>
                     <td>{{ innslag.getType() }}</td>
 
-                    {% if person.getKommune() && person.getKommune() != 'ukjent' %}
+                    {% if person.getKommune() %}
                         <td>{{ person.getKommune().getNavn() }}</td>
-                    {% else %}
-                        <td>{{ innslag.getKommune().getNavn() }}</td>
                     {% endif %}
                     
                     {% if person.getFylke() %}
