Tekst endret til AlleDeltakere rapport

--- a/twig/Deltakere/rapport.html.twig
+++ b/twig/Deltakere/rapport.html.twig
@@ -93,7 +93,7 @@
     {% endfor %}
 {% endif %}
 
-<h4>Totalt: {{ counter + uniqueDeltaker|length }}</h4>
+<h4>Unike deltakere: {{ counter + uniqueDeltaker|length }}</h4>
 
 <style>
 #rapportDeltakereTable {
