--- a/twig/Deltakere/rapport.html.twig
+++ b/twig/Deltakere/rapport.html.twig
@@ -22,7 +22,7 @@
             {% set innslag = personerInnslag['innslag'] %}
 
             {% if person.getMobil() %}
-                {% set uniqueDeltaker = uniqueDeltaker|merge({('mobil_' ~ person.getMobil()) : person.getMobil()}) %}
+                {% set uniqueDeltaker = uniqueDeltaker|merge({(person.getNavn() ~ '_' ~ person.getMobil()) : person.getMobil()}) %}
             {% else %}
                 {% set counter = counter + 1 %} 
             {% endif %}
@@ -58,7 +58,7 @@
         {% if personer %}
             {% for person in personer|sort((a, b) => a.getNavn() <=> b.getNavn()) %}
                 {% if person.getMobil() %}
-                    {% set uniqueDeltaker = uniqueDeltaker|merge({('mobil_' ~ person.getMobil()) : person.getMobil()}) %}
+                    {% set uniqueDeltaker = uniqueDeltaker|merge({(person.getNavn() ~ '_' ~ person.getMobil()) : person.getMobil()}) %}
                 {% else %}
                     {% set counter = counter + 1 %} 
                 {% endif %}
