--- a/twig/TotaloverisktVideresendingFylke/rapport.html.twig
+++ b/twig/TotaloverisktVideresendingFylke/rapport.html.twig
@@ -144,14 +144,14 @@
         </tbody>
     </table>
 {% endif %}
-
+    <hr>
      <table class="table total-oversikt total-i-fylke">
         <thead>
             <tr>
                 <th scope="col"></th>
                 <th scope="col">Antall innslag</th>
                 <th scope="col">Antall deltakere</th>
-                <th scope="col">Antall unike deltakere per fylke</th>
+                <th scope="col">Antall unike deltakere</th>
                 <th scope="col">Antall unike deltakere i {{ arrangementTil.getNavn() }}</th>
                 <th scope="col">Antall ledere</th>
                 <th scope="col">Antall ledsagere / turister</th>
