Endrer tekst for å ikke bli forvirra
Avreise er ikke den siste overnatting

--- a/twig/Overnatting/rapport.html.twig
+++ b/twig/Overnatting/rapport.html.twig
@@ -9,7 +9,7 @@
                 <th scope="col">Mobil</th>
                 <th scope="col">Epost</th>
                 <th scope="col">Ankomst</th>
-                <th scope="col">Avreise</th>
+                <th scope="col">Siste overnatting</th>
                 <th scope="col">Rom</th>
             </tr>
         </thead>
